// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders correctly 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #DDE5E9;
  position: relative;
  gap: 8px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 18px;
  height: 18px;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 100%;
  height: auto;
  position: relative;
  text-align: center;
}

.c16 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 100%;
  height: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: normal;
}

.c17 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
}

.c18 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
}

.c19 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  line-height: 14px;
  display: inline-block;
  font-size: 10px;
  font-family: primary;
  text-align: center;
  font-weight: bold;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: static;
}

.c7 {
  display: none;
}

input:checked:not(:disabled) ~ .c6 {
  display: block;
}

.c10 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c9 {
  display: block;
}

.c14 {
  display: none;
}

input:checked:disabled ~ .c13 {
  display: block;
}

.c12 {
  display: none;
}

input:disabled:not(:checked) ~ .c11 {
  display: block;
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c0 c2"
    id="0"
    style={
      {
        "width": "224px",
      }
    }
  >
    <div
      className="c0 c3"
    >
      <input
        className="c0 c4"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        className="c0 c5 c6 c7 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#6A88F2"
          height="15"
          rx="4"
          ry="4"
          stroke="#6A88F2"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="white"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c5 c9 c10 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="white"
          height="15"
          rx="4"
          ry="4"
          stroke="#C1CCD0"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c5 c11 c12 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c5 c13 c14 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="#C1CCD0"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
    </div>
    <div
      className="c0 c15"
      onError={[Function]}
      src="https://images.pexels.com/photos/1133957/pexels-photo-1133957.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
    >
      <img
        className="c0 c16"
        display="normal"
        src="https://images.pexels.com/photos/1133957/pexels-photo-1133957.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
      />
    </div>
    <div
      className="c0 c1"
    >
      <p
        className="c0 c17"
        style={
          {
            "color": "#056C53",
          }
        }
      >
        Disponible
      </p>
      <p
        className="c0 c17"
      >
        IHO2543876
      </p>
      <p
        className="c0 c18"
      >
        Ciudad de la paz 11456
      </p>
      <button
        className="c0 c19"
        style={
          {
            "position": "absolute",
            "right": "4px",
            "top": "-2px",
          }
        }
      >
        50%
      </button>
    </div>
  </div>
</div>
`;

exports[`Card renders correctly not active 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F3F6F8;
  position: relative;
  gap: 8px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 18px;
  height: 18px;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 100%;
  height: auto;
  position: relative;
  text-align: center;
}

.c16 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 100%;
  height: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: normal;
}

.c17 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
}

.c18 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
}

.c19 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  line-height: 14px;
  display: inline-block;
  font-size: 10px;
  font-family: primary;
  text-align: center;
  font-weight: bold;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: static;
}

.c7 {
  display: none;
}

input:checked:not(:disabled) ~ .c6 {
  display: block;
}

.c10 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c9 {
  display: block;
}

.c14 {
  display: none;
}

input:checked:disabled ~ .c13 {
  display: block;
}

.c12 {
  display: none;
}

input:disabled:not(:checked) ~ .c11 {
  display: block;
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c0 c2"
    id="0"
    style={
      {
        "width": "224px",
      }
    }
  >
    <div
      className="c0 c3"
    >
      <input
        className="c0 c4"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        className="c0 c5 c6 c7 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#6A88F2"
          height="15"
          rx="4"
          ry="4"
          stroke="#6A88F2"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="white"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c5 c9 c10 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="white"
          height="15"
          rx="4"
          ry="4"
          stroke="#C1CCD0"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c5 c11 c12 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c5 c13 c14 c0 c8"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="#C1CCD0"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
    </div>
    <div
      className="c0 c15"
      onError={[Function]}
      src="https://images.pexels.com/photos/1133957/pexels-photo-1133957.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
    >
      <img
        className="c0 c16"
        display="normal"
        src="https://images.pexels.com/photos/1133957/pexels-photo-1133957.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
      />
    </div>
    <div
      className="c0 c1"
    >
      <p
        className="c0 c17"
        style={
          {
            "color": "#056C53",
          }
        }
      >
        Disponible
      </p>
      <p
        className="c0 c17"
      >
        IHO2543876
      </p>
      <p
        className="c0 c18"
      >
        Ciudad de la paz 11456
      </p>
      <button
        className="c0 c19"
        style={
          {
            "position": "absolute",
            "right": "4px",
            "top": "-2px",
          }
        }
      >
        50%
      </button>
    </div>
  </div>
</div>
`;
